--- a/test/e2e/config/setup.yaml
+++ b/test/e2e/config/setup.yaml
@@ -137,6 +137,7 @@ apiVersion: v1
 metadata:
     name: testpod
     namespace: cni-test
+    
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
@@ -144,9 +145,9 @@ metadata:
     namespace: cni-test
     name: testreader
 rules:
-    - apiGroups: [""]
-      resources: ["pods"]
-      verbs: ["get", "watch", "list"]
+    - apiGroups: ["", "apps"]
+      resources: ["pods", "deployments", "services"]
+      verbs: ["create", "update", "get", "watch", "list"] #todo move create
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -162,7 +163,6 @@ roleRef:
     kind: Role
     name: testreader
     apiGroup: ""
-
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
