--- a/test/e2e/config/setup.yaml
+++ b/test/e2e/config/setup.yaml
@@ -146,7 +146,11 @@ metadata:
     name: testreader
 rules:
     - apiGroups: ["", "apps"]
-      resources: ["pods", "deployments", "services"]
+      resources:
+      - pods
+      - deployments
+      - services
+      - endpoints
       verbs: ["create", "update", "get", "watch", "list"] #todo move create
 ---
 kind: RoleBinding
