--- a/test/e2e/config/e2e.yaml
+++ b/test/e2e/config/e2e.yaml
@@ -1,22 +1,16 @@
 ---
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: batch/v1
+kind: Job
 metadata:
   namespace: cni-test
   name: cni-e2e
   labels:
     app: cni-e2e
 spec:
-  replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 5
-      maxUnavailable: 1
   template:
-    metadata:
-      labels:
-        app: cni-e2e
+    # metadata:
+    # labels:
+    #   app: cni-e2e
     spec:
       serviceAccountName: "testpod"
       terminationGracePeriodSeconds: 180
@@ -24,6 +18,42 @@ spec:
       - name: cni-e2e
         image: 038954622175.dkr.ecr.us-west-2.amazonaws.com/amazon-k8s-cni-e2e:latest
         imagePullPolicy: Always
+        command: ["test/e2e/cni"]
+      restartPolicy: Never
+  backoffLimit: 4
+
+
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   namespace: cni-test
+#   name: cni-e2e
+#   labels:
+#     app: cni-e2e
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: cni-e2e
+#   strategy:
+#     type: RollingUpdate
+#     rollingUpdate:
+#       maxSurge: 5
+#       maxUnavailable: 1
+#   template:
+#     metadata:
+#       labels:
+#         app: cni-e2e
+#     spec:
+#       serviceAccountName: "testpod"
+#       terminationGracePeriodSeconds: 180
+#       containers:
+#       - name: cni-e2e
+#         image: 038954622175.dkr.ecr.us-west-2.amazonaws.com/amazon-k8s-cni-e2e:latest
+#         imagePullPolicy: Always
+#       restartPolicy: OnFailure
 
 # ---
 # apiVersion: v1
