--- a/test/e2e/config/e2e.yaml
+++ b/test/e2e/config/e2e.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: cni-e2e
 spec:
-  hostNetwork: true
+  #hostNetwork: true
   serviceAccountName: "testpod"
   terminationGracePeriodSeconds: 180
   restartPolicy: Never
@@ -18,7 +18,7 @@ spec:
     args: ["test/e2e/cni", "false"]
     env: 
     - name: TESTPOD_IMAGE_URI
-      value: 038954622175.dkr.ecr.us-west-2.amazonaws.com/k8s-prow/amazon-k8s-cni-testpod:v1.3.0-249-g4e4a76cd
+      value: 038954622175.dkr.ecr.us-west-2.amazonaws.com/k8s-prow/amazon-k8s-cni-testpod:v1.5.0-rc1-45-ga5f8d7c9
       
 
 # ---
