--- a/scripts/dockerfiles/Dockerfile.release
+++ b/scripts/dockerfiles/Dockerfile.release
@@ -13,6 +13,7 @@ COPY go.sum .
 
 # This ensures `go mod download` happens only when go.mod and go.sum change.
 RUN go mod download
+RUN go get -u golang.org/x/tools/cmd/goimports
 
 COPY . .
 RUN make build-linux && make download-portmap
